# wini

./: .gitignore  LICENSE.md  README.md  RELEASE-PROCESS.md  ROADMAP.md  justfile
.github/workflows/: check.yml
examples/htmx/: Cargo.toml  README.md  bun.lockb  package.json  wini.toml
examples/htmx/scripts/: README.md
examples/htmx/src/: lib.rs  main.rs  server.rs
examples/htmx/src/pages/: mod.rs
examples/htmx/src/pages/main/: mod.rs  style.scss
examples/htmx/src/shared/wini/: mod.rs  (+1 more)
examples/htmx/tests/wini/: canonicalize_relative_path.rs
examples/sqlx_test/: Cargo.toml  Dockerfile  README.md  flake.nix  justfile
examples/sqlx_test/migrations/: 20241201225604_init.sql
examples/sqlx_test/src/: lib.rs  main.rs  server.rs
examples/sqlx_test/tests/wini/: canonicalize_relative_path.rs
scripts/: branches.json  build-template.nu  build-template.sh  check-all.nu  check.nu  clippy.sh  init-branch.nu  see-branch.nu  sync-codeberg-with-github.nu  sync-default-main.nu  update-branch.sh  update-remote.nu
scripts/tests/: expected-index.html  js-pkgs.nu  ssg.nu
wini/: .gitignore  Cargo.toml  flake.nix  justfile  taplo.toml  wini.toml
wini-cli/: .gitignore  Cargo.toml  README.md  RELEASE-PROCESS.md
wini-cli/src/: cli.rs  lib.rs  main.rs  utils.rs
wini-cli/src/init/: ask.rs  err.rs  git.rs  mod.rs  rename.rs
wini-cli/src/just/: args_from_file.rs  mod.rs  run.rs  search_justfile.rs
wini-cli/tests/: clone.rs  clone_and_init.rs
wini-maud/: Cargo.toml  README.md  old-LICENSE.md
wini-maud-macros/: Cargo.toml  README.md  RELEASE_PROCESS.md
wini-maud-macros/src/: ast.rs  generate.rs  lib.rs  parse.rs
wini-maud/benches/: complicated_maud.rs
wini-maud/src/: lib.rs
wini-maud/tests/: basic_syntax.rs  wini.rs
wini-website/: Cargo.toml  bun.lockb  package.json  packages-files.toml  wini.toml
wini-website/scripts/: ask-path-packages.sh  sync-packages.sh
wini-website/src/: server.rs
wini-website/src/layout/main/: mod.rs  script.ts  style.scss
wini-website/src/pages/doc/: css.sublime-syntax  mod.rs  structure.ron  style.scss  style_code.rs
wini-website/src/shared/wini/: dependencies.rs  packages_files.rs
wini-website/src/template/: always_loaded.css  mod.rs
wini/macros/src/: lib.rs
wini/scripts/: README.md  ask-path-packages.nu  ask-path-packages.sh  clean-js-without-ts.nu  fmt.nu  lint.nu  new.nu  new.sh  on-install.nu  on-install.sh  run.nu  run.sh  scss.nu  sync-commit-hash.nu  sync-commit-hash.sh  sync-packages.nu  sync-template.nu  sync-template.sh  typescript.nu  update-template.sh  utils.nu
wini/src/: lib.rs  main.rs  server.rs
wini/src/components/: mod.rs
wini/src/layout/header/: mod.rs
wini/src/layouts/header/: mod.rs
wini/src/pages/hello/: mod.rs
wini/src/shared/wini/: components_files.rs  config.rs  dependencies.rs  err.rs  layer.rs  layout.rs  mod.rs  packages_files.rs  response.rs  ssg.rs  tsconfig.rs
wini/src/template/: html.rs  meta.rs  mod.rs
wini/src/utils/wini/: buffer.rs  cache.rs  file.rs  handling_file.rs
(+34 files in other folders)
