[package]
name = "wini-cli"
version = "0.1.0"
authors = ["tkr-sh"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "CLI utility for wini"
repository = "https://codeberg.org/wini/wini"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]
exclude = [
    "LICENSE.md",
]

[dependencies]
anstyle = "1.0.10"
clap = { version = "4.5.21", features = ["cargo", "string"]}
git2 = "0.19.0"
inquire = "0.7.5"
# Version of just with public exposed data so it's actually usable
pub-just = { version = "1.37.0" }
rand = "0.8.5"
