[package]
name = "wini"
version = "0.1.2"
authors = ["tkr-sh"]
edition = "2024"
license = "AGPL-3.0-or-later"
description = "CLI utility for wini"
repository = "https://codeberg.org/wini/wini"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]
exclude = [
    "LICENSE.md",
]

[dependencies]
anstyle = "1.0"
clap = { version = "4.5", features = ["cargo", "string"]}
git2 = "0.20"
inquire = "0.7"
# Version of just with public exposed data so it's actually usable
pub-just = { version = "1.37" }
rand = "0.9"
