[package]
name = "wini-maud"
version = "0.26.3"
documentation = "https://docs.rs/wini-maud/"
description = "Compile-time HTML templates to work with Wini."
categories = ["template-engine"]
repository = "https://github.com/wini-rs/wini"
edition = "2021"
authors = ["Chris Wong <lambda.fairy@gmail.com>", "tk"]
license = "LGPL-3.0-or-later"


[features]
default = []

# Web framework integrations
actix-web = ["actix-web-dep", "futures-util"]
axum = ["axum-core", "http"]

[dependencies]
wini_maud_macros = { version = "0.26.2" }
itoa = "1"
rocket = { version = "0.5", optional = true }
futures-util = { version = "0.3.0", optional = true, default-features = false }
actix-web-dep = { package = "actix-web", version = "4", optional = true, default-features = false }
tide = { version = "0.16.0", optional = true, default-features = false }
axum-core = { version = "0.4", optional = true }
submillisecond = { version = "0.4.1", optional = true }
http = { version = "1", optional = true }
warp = { version = "0.3.6", optional = true }
hashbrown = "0.15.2"

[dev-dependencies]
trybuild = { version = "1.0.33", features = ["diff"] }

[package.metadata.docs.rs]
all-features = true

[lib]
name = "maud"
